--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "node build.js",
     "deploy:docs": "npm run build && gh-pages -d dist",
-    "release": "npm run build && npm publish"
+    "prepare": "npm run build",
+    "release": "npm publish"
   },
   "repository": {
     "type": "git",
